[project]
name = "meteoregik-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydantic-settings-aws>=0.1.2",
    "sqlalchemy>=2.0.48",
    "xlrd>=2.0.2",
]
